fixed arm64 apple silicon support